Fix memory use with ans

--- a/FunctionCalculator/TODO.txt
+++ b/FunctionCalculator/TODO.txt
@@ -1,4 +1,4 @@
 - Something funky going on with custom names and their null terminators. Fucking null terminators.
-- Negation doesn't work properly with -1-1
 - Spray consts everywhere
 - Parameter names in headers
+- Check all mallocs for NULL
