--- a/FunctionCalculator/TODO.txt
+++ b/FunctionCalculator/TODO.txt
@@ -1,7 +1,7 @@
-- Something funky going on with custom names and their null terminators. Fucking null terminators. DONE possibly
 - Spray consts everywhere
 - Parameter names in headers
-- Check all mallocs for NULL
+- Check all mallocs for NULL?
 - Comment EVERYTHING
 - Save shit to files
 - More commands for shit like answers and such
+- FIX ANS
